# tact

./: .gitignore  .travis.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  NEWS.md  README.md  benchmark.py  mkdocs.yml  pyproject.toml  setup.py  tox.ini  update_vendor.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql-analysis.yml  docker.yml  docs.yml  lint.yml  pythonpackage.yml
docs/: CNAME  api.md  background.md  commands.md  introduction.md  third-party-licenses.md  troubleshooting.md  tutorial.md
docs/reference/: lib.md  mrca.md  tree.md
examples/: .gitignore  Carangaria.csv  README.md  setup_percomorphaceae.py
simtaxer/: cli.py  cli_add_taxa.py  cli_check_trees.py  lib.py
tact/: cli_add_taxa.py  cli_add_toml.py  cli_check_trees.py  cli_taxonomy.py  exceptions.py  fastmrca.py  generic_monophyly.py  lib.py  optim.py  tree_util.py  validation.py
tests/: conftest.py  test_add_taxa_integration.py  test_add_toml_integration.py  test_bd_optim.py  test_cli.py  test_convert.py  test_create_clade.py  test_disjoint.py  test_lik_constant.py  test_stem_attachment.py  test_yule.py
tests/data/: disjoint.tre  intrusion.backbone.tre  intrusion.taxonomy.tre  short_branch.backbone.tre  short_branch.taxonomy.tre  stem.backbone.tre  stem.taxonomy.tre  stem2.backbone.tre  stem2.taxonomy.tre  weirdness.backbone.tre  weirdness.taxonomy.tre
