[project]
name = "tact"
version = "0.7.0"
description = "Taxonomic addition for complete trees: Adds tips to a backbone phylogeny using taxonomy simulated with birth-death models"
authors = [
    { name = "Jonathan Chang", email = "me@jonathanchang.org" },
    { name = "Dan Rabosky", email = "drabosky@umich.edu" },
    { name = "Michael Alfaro", email = "michaelalfaro@ucla.edu" },
]
maintainers = [
    { name = "Jonathan Chang", email = "me@jonathanchang.org" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4"
dynamic = ["classifiers"]
dependencies = [
    "scipy>=1.13",
    "numpy (>=2.3.5,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "DendroPy>=4.5,<6.0",
    "portion>=2.2",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "pytest-console-scripts (>=1.4.1,<2.0.0)",
    "hypothesis (>=6.148.0,<7.0.0)",
]

[project.urls]
homepage = "https://tact.jonathanchang.org"
repository = "https://github.com/jonchang/tact"
documentation = "https://tact.jonathanchang.org"
issue = "https://github.com/jonchang/tact/issues"
changelog = "https://tact.jonathanchang.org/news/"
sponsor = "https://github.com/sponsors/jonchang"

[project.scripts]
tact_add_taxa = "tact.cli_add_taxa:main"
tact_add_config = "tact.cli_add_toml:main"
tact_build_taxonomic_tree = "tact.cli_taxonomy:main"
tact_check_results = "tact.cli_check_trees:main"

[tool.poetry]
include = ["examples"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.ruff]
line-length = 118
exclude = [
    "tact/vendor/**",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "NPY", # numpy warnings
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "D",   # pydocstyle
    "DOC", # pydoclint
    "I",   # isort
    "RUF", # ruff
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ICN", # flake8-import-conventions
    "FA",  # flake8-future-annotations
    "C4",  # flake8-comprehensions
    "A"    # flake8-builtins
]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests` and CLI modules.
"tests/**" = ["D", "DOC"]
"tact/cli_*" = ["D", "DOC"]
"__init__.py" = ["D", "DOC"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry_core>=2.0"]
build-backend = "poetry.core.masonry.api"
